@@ -18,7 +18,6 @@
 package org.ehrbase.openehr.sdk.validation.webtemplate;
 
 import com.nedap.archie.rm.datavalues.quantity.datetime.DvTime;
-import java.util.Collections;
 import java.util.List;
 import org.ehrbase.openehr.sdk.validation.ConstraintViolation;
 import org.ehrbase.openehr.sdk.webtemplate.model.WebTemplateNode;
@@ -32,8 +31,6 @@ import org.ehrbase.openehr.sdk.webtemplate.model.WebTemplateNode;
 @SuppressWarnings("unused")
 public class DvTimeValidator implements ConstraintValidator<DvTime> {
 
-    private final PrimitiveConstraintValidator validator = new PrimitiveConstraintValidator();
-
     /**
      * {@inheritDoc}
      */
@@ -41,17 +38,16 @@ public class DvTimeValidator implements ConstraintValidator<DvTime> {
     public Class<DvTime> getAssociatedClass() {
         return DvTime.class;
     }
-
     /**
      * {@inheritDoc}
      */
     @Override
     public List<ConstraintViolation> validate(DvTime dvTime, WebTemplateNode node) {
         if (!WebTemplateValidationUtils.hasInputs(node)) {
-            return Collections.emptyList();
+            return List.of();
         }
 
         var input = WebTemplateValidationUtils.getInputWithType(node, "TIME");
-        return validator.validate(node.getAqlPath(), dvTime.getValue(), input);
+        return PrimitiveConstraintValidator.validate(node.getAqlPath(), dvTime.getValue(), input);
     }
 }
